# espeak

./: CMakeLists.txt  README.md
cmake/tests/: test_dirent.c  test_poll.c  test_semaphore.c
include/: espeak_command.h  fifo.h  klatt.h  mbrowrap.h  phoneme.h  portaudio18.h  portaudio19.h  sintab.h  sonic.h  speak_lib.h  speech.h  synthesize.h  translate.h  voice.h  wave.h
src/: espeak.c  speak.c  speak.cpp
src/libespeak/: compiledict.c  dictionary.c  espeak_command.c  event.c  fifo.c  intonation.c  klatt.c  klatt.cpp  mbrowrap.c  numbers.c  phonemelist.c  readclause.c  setlengths.c  setlengths.cpp  sonic.c  speak_lib.c  speak_lib.cpp  synth_mbrola.c  synthdata.c  synthdata.cpp  synthesize.c  synthesize.cpp  tr_languages.c  tr_languages.cpp  translate.c  voices.c  wave.c  wavegen.c  wavegen.cpp
